# apiService/internal/dto/update_role_permissions_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+// UpdateRolePermissionsRequestGateway - запрос на обновление permissions роли через API Gateway
+type UpdateRolePermissionsRequestGateway struct {
+	PermissionIds []int `json:"permission_ids" binding:"required"`
+}
