# apiService/internal/dto/update_user_role_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+// UpdateUserRoleRequestGateway - запрос на изменение роли пользователя через API Gateway
+type UpdateUserRoleRequestGateway struct {
+	RoleID int `json:"role_id" binding:"required"`
+}
