# userService/internal/handlers/dto/update_role_permissions_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+// UpdateRolePermissionsRequest - запрос на обновление permissions роли
+type UpdateRolePermissionsRequest struct {
+	PermissionIds []int `json:"permission_ids" binding:"required"`
+}
